--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ JWT_SECRET="secret1234"
 JWT_EXPIRES="30d"
 ADMIN_EMAIL="bryan@gmail.com"
 ADMIN_PASSWORD="12345678"
+EMAIL_USSER= "rodte1234@gmail.com"
+EMAIL_PASS= "okix zolm nsbm tard"
