--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "type": "module"
+  "type": "module",
+  "description": ""
 }
